--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -6,6 +6,14 @@
   <title>New Article</title>
 </head>
 <body>
+  <% if @article.errors.any? %>
+    <h2>The following errors prevented the following errors from being saved</h2>
+    <ul>
+      <% @article.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+    </ul>
+  <% end %>
   <h1>Create a new article</h1>
   <%= form_with scope: :article, url: articles_path, local: true do |f| %>
     <p>
