--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -16,7 +16,6 @@
         <tr>
           <td><%= article.title %></td>
           <td><%= article.description %></td>
-          <td><%= link_to 'new', new_article_path%></td>
           <td><%= link_to 'Show', article_path(article)%></td>
           <td><%= link_to 'Edit', edit_article_path(article)%></td>
           <td><%= link_to 'Delete', article_path(article), method: :delete %></td>
@@ -25,3 +24,5 @@
     </tbody>
   </table>
 </body>
+<br>
+<%= link_to 'Create new Article', new_article_path %>
