--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -34,5 +34,8 @@
 
     <p><%= f.submit %></p>
   <%end%>
+
+  <%= link_to 'Cancel and return to articles listing', articles_path %>
+
 </body>
 </html>
