--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -7,5 +7,8 @@
 </head>
 <body>
   <h1>About</h1>
+  <br>
+  <%= link_to 'Articles listing', articles_path %> |
+  <%= link_to 'Home Page', root_path %>
 </body>
 </html>
