--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,6 +6,11 @@
   <title>Alpha-blog</title>
 </head>
 <body>
-  Hello World
+  <h1>Welcome to the app</h1>
+  
+  <br>
+  <%= link_to 'Articles listing', articles_path %> |
+  <%= link_to 'About Page', about_path %>
+
 </body>
 </html>
