--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -6,35 +6,7 @@
   <title>New Article</title>
 </head>
 <body>
-  <% if @article.errors.any? %>
-    <h2>The following errors prevented the following errors from being saved</h2>
-    <ul>
-      <% @article.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-    </ul>
-  <% end %>
-  <h1>Edit article</h1>
-  <%= form_with(model: @article, local: true) do |f| %>
-    <p>
-      <strong>
-        <%= f.label :title%>
-      </strong>
-      <br>
-      <%= f.text_field :title%>
-    </p>
-
-    <p>
-      <strong>
-        <%= f.label :description%>
-      </strong>
-      <br>
-      <%= f.text_area :description%>
-    </p>
-
-    <p><%= f.submit %></p>
-  <%end%>
-
+  <%= render 'form' %>
   <%= link_to 'Cancel and return to articles listing', articles_path %>
 
 </body>
