--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -6,34 +6,7 @@
   <title>New Article</title>
 </head>
 <body>
-  <% if @article.errors.any? %>
-    <h2>The following errors prevented the following errors from being saved</h2>
-    <ul>
-      <% @article.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-    </ul>
-  <% end %>
-  <h1>Create a new article</h1>
-  <%= form_with scope: :article, url: articles_path, local: true do |f| %>
-    <p>
-      <strong>
-        <%= f.label :title%>
-      </strong>
-      <br>
-      <%= f.text_field :title%>
-    </p>
-
-    <p>
-      <strong>
-        <%= f.label :description%>
-      </strong>
-      <br>
-      <%= f.text_area :description%>
-    </p>
-
-    <p><%= f.submit %></p>
-  <%end%>
+  <%= render 'form' %>
   <%= link_to 'Return to articles listing', articles_path %>
 
 </body>
