--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,16 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Alpha-blog</title>
-</head>
-<body>
-  <h1>Welcome to the app</h1>
-  
-  <br>
-  <%= link_to 'Articles listing', articles_path %> |
-  <%= link_to 'About Page', about_path %>
+<div id="page-content">
+  <div class="container" id="home-container">
+    <div class="jumbotron text-center">
+      <h1 class="display-4">Alpha-blog</h1>
+      <p class="lead">
+        This is a simple hero unit, a simple jumbotron-style component for calling
+        extra attention to featured content or information.
+      </p>
+      <hr class="my-4" />
+      <p>
+        It uses utility classes for typography and spacing to space content out
+        within the larger container.
+      </p>
+      <p class="lead">
+        <a class="btn btn-success btn-lg" href="#" id="learn-more" role="button">Sign up!</a>
+      </p>
+    </div>
+  </div>
+</div>
 
-</body>
-</html>
+<footer id="sticky-footer" class="py-4 bg-dark text-white-50">
+  <div class="container text-center">
+    <small>Copyright &copy; Alpha-Blog</small>
+    
+  </div>
+</footer>
