--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,25 +4,20 @@
   <title>Alpha-blog Index</title>
 </head>
 <body>
-  <h1>Articles index</h1>
-  <table>
-    <thead>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Actions</th>
-    </thead>
-    <tbody>
-      <% @articles.each do |article| %>
-        <tr>
-          <td><%= article.title %></td>
-          <td><%= article.description %></td>
-          <td><%= link_to 'Show', article_path(article)%></td>
-          <td><%= link_to 'Edit', edit_article_path(article)%></td>
-          <td><%= link_to 'Delete', article_path(article), method: :delete, data: { confirm: "Are you sure?"} %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
+  <h1 class="text-center mt-4">Article Listings</h1>
+  <% @articles.each do |article| %>
+    <div class="card m-2 mx-auto" style="min-width: 50%; max-width: 80%">
+      <div class="card-header text-center">
+        <%= article.title %>
+      </div>
+      <div class="card-body text-center">
+        <blockquote class="blockquote mb-0">
+          <p><%= article.description %></p>
+          <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+        </blockquote>
+        <button class="btn btn-success mt-3">My button</button>
+      </div>
+    </div>
+  <% end %>
+ 
 </body>
-<br>
-<%= link_to 'Create new Article', new_article_path %>
