--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,13 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>New Article</title>
-</head>
-<body>
-  <%= render 'form' %>
-  <%= link_to 'Cancel and return to articles listing', articles_path %>
 
+<body>
+  <div id="page-content">
+    <%= render 'form' %>
+    <%= link_to 'Cancel and return to articles listing', articles_path %>
+  </div>
 </body>
-</html>
