--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,23 +1,36 @@
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Alpha-blog Index</title>
-</head>
+
 <body>
-  <h1 class="text-center mt-4">Article Listings</h1>
-  <% @articles.each do |article| %>
-    <div class="card m-2 mx-auto" style="min-width: 50%; max-width: 80%">
-      <div class="card-header text-center">
-        <%= article.title %>
+  <div id="page-content">
+    <h1 class="text-center mt-4">Article Listings</h1>
+    <% @articles.each do |article| %>
+      <div class="row justify-content-md-center">
+        <div class="col-8">
+          <div class="card mt-3 shadow bg-white rounded">
+            <div class="card-header text-center">
+              <h5 ><%= link_to article.title, article_path(article), class:"text-success" %></h5>
+            </div>
+            <div class="card-body text-center">
+              <blockquote class="blockquote mb-0">
+                <p><%= truncate(article.description, length:300) %></p>
+                <footer class="blockquote-footer"> Abdul Haqani <cite title="Date">
+                  <%= time_ago_in_words(article.created_at) %> 
+                  <small class="font-italic">
+                  <% if article.updated_at != article.created_at %>
+                    Edited
+                  <% end %>
+                </small>
+                </cite></footer>
+                
+              </blockquote>
+              <button class="btn btn-outline-success mt-3"><%= link_to "View", article_path(article), class: "text-success" %></button>
+              <button class="btn btn-outline-warning mt-3"><%= link_to "edit", edit_article_path(article), class: "text-warning" %></button>
+              <button class="btn btn-outline-danger mt-3"><%= link_to "Delete", article_path(article), method: :delete, class: "text-danger", data: {
+                confirm: "Are you sure?"
+              } %></button>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="card-body text-center">
-        <blockquote class="blockquote mb-0">
-          <p><%= article.description %></p>
-          <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
-        </blockquote>
-        <button class="btn btn-success mt-3">My button</button>
-      </div>
-    </div>
-  <% end %>
- 
+    <% end %>
+  </div>
 </body>
