--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,28 +1,41 @@
 <% if @article.errors.any? %>
-    <h2>The following errors prevented the following errors from being saved</h2>
-    <ul>
-      <% @article.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-    </ul>
-  <% end %>
-  <h1>Edit article</h1>
-  <%= form_with(model: @article, local: true) do |f| %>
-    <p>
-      <strong>
-        <%= f.label :title%>
-      </strong>
-      <br>
-      <%= f.text_field :title%>
-    </p>
+  <h2>The following errors prevented the following errors from being saved</h2>
+  <ul>
+    <% @article.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+  </ul>
+<% end %>
 
-    <p>
-      <strong>
-        <%= f.label :description%>
-      </strong>
-      <br>
-      <%= f.text_area :description%>
-    </p>
-
-    <p><%= f.submit %></p>
-  <%end%>
+<%= form_with(model: @article, local: true) do |f| %>
+  <div class="container">
+    <div class="card shadow rounded" id="article-form">
+    
+      <div class="row mt-3">
+        <div class="form-group col-2 ml-4">
+          <%= f.label :title, class: 'text-white' %>
+        </div>
+        <div class="form-group col-9" style="width: 70%">
+          <%= f.text_field :title, class: 'form-control shadow rounded', placeholder: "Article Title"%>
+        </div>
+      </div>
+    
+    
+      <div class="row">
+        <div class="form-group col-2 ml-4">
+          <%= f.label :description, class: 'text-white' %>
+        </div>
+        <div class="form-group col-9" style="width: 100%">
+          <%= f.text_area :description, class: 'form-control shadow rounded', rows: 10, placeholder: "Article Description"%>
+        </div>
+      </div>
+      <div class="form-group row mx-auto">
+        <%= f.submit class: "btn btn-outline-light" %>
+      </div>
+      
+    </div>
+  </div>
+<%end%>
+<div class="text-center mt-4">
+  <%= link_to 'Cancel and return to articles listing', articles_path, class: "text-info" %> 
+</div>
