--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,7 +1,10 @@
 
 <body>
   <div id="page-content">
+    <div class="container">
+      <h1 class="text-center mt-4">Edit article</h1>
+    </div>
     <%= render 'form' %>
-    <%= link_to 'Cancel and return to articles listing', articles_path %>
+    
   </div>
 </body>
