--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,7 +1,9 @@
 
 <body>
   <div id="page-content">
+    <div class="container">
+      <h1 class="text-center mt-4">Create a new article</h1>
+    </div>
     <%= render 'form' %>
-    <%= link_to 'Return to articles listing', articles_path %>
   </div>
 </body>
