messages, errors, more styling etc

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,12 +1,4 @@
-<% if @article.errors.any? %>
-  <h2>The following errors prevented the following errors from being saved</h2>
-  <ul>
-    <% @article.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-  </ul>
-<% end %>
-
+<%= render 'shared/errors' %>
 <%= form_with(model: @article, local: true) do |f| %>
   <div class="container">
     <div class="card shadow rounded" id="article-form">
