--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -28,6 +28,6 @@
     </div>
   </div>
 <%end%>
-<div class="text-center mt-4">
+<div class="text-center mt-3 mb-3">
   <%= link_to 'Cancel and return to articles listing', articles_path, class: "text-info" %> 
 </div>
