--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,18 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Show article</title>
-</head>
 <body>
-  <h1>Showing article details</h1>
+  <h2 class="text-center mt-4"><%= @article.title %></h2>
+  <div class="row justify-content-md-center">
+    <div class="col-8">
+      <div class="card mt-3 shadow rounded">
 
-  <p><strong>Title: </strong><%= @article.title%></p>
-  <p><strong>Description: </strong><%= @article.description%></p>
+        <div class="card-body text-center">
+          <blockquote class="blockquote mb-0">
+            <div class="card-text text-left"><%= simple_format(@article.description) %></div>
+            <footer class="blockquote-footer"> Abdul Haqani <cite title="Date">
+              <%= time_ago_in_words(@article.created_at) %> 
+              <small class="font-italic">
+              <% if @article.updated_at != @article.created_at %>
+                Edited
+              <% end %>
+            </small>
+            </cite></footer>
+            
+          </blockquote>
+          <button class="btn btn-outline-warning mt-3"><%= link_to "edit", edit_article_path(@article), class: "text-warning" %></button>
+          <button class="btn btn-outline-danger mt-3">
+            <%= link_to "Delete", article_path(@article), method: :delete, class: "text-danger", data: {
+              confirm: "Are you sure?"
+            } %>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="mt-3 mb-3 text-center">
+    <%= link_to 'Return to articles listing', articles_path %>
+  </div>
 
-  <%= link_to 'Edit', edit_article_path(@article.id) %> | 
-  <%= link_to 'Delete', article_path(@article.id), method: :delete, data: { confirm: "Are you sure?"} %> |
-  <%= link_to 'Return to articles listing', articles_path %>
 </body>
-</html>
