--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -10,7 +10,7 @@
         <div class="card-body text-center">
           <blockquote class="blockquote mb-0">
             <p><%= truncate(article.description, length:300) %></p>
-            <footer class="blockquote-footer"> Abdul Haqani <cite title="Date">
+            <footer class="blockquote-footer"> <%= article.user.username if article.user %> <cite title="Date">
               <%= time_ago_in_words(article.created_at) %> 
               <small class="font-italic">
               <% if article.updated_at != article.created_at %>
