--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,8 +1,8 @@
-<% if @article.errors.any? %>
+<% if obj.errors.any? %>
   <div class="alert alert-danger alert-dismissible fade show mx-auto col-10 shadow rounded" role="alert">
     <h4 class="alert-heading">The following errors prevented the following errors from being saved</h4>
     <ul>
-      <% @article.errors.full_messages.each do |msg| %>
+      <% obj.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
       <% end %>
     </ul>
@@ -10,5 +10,4 @@
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
-
 <% end %>
