--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,7 +11,7 @@
       within the larger container.
     </p>
     <p class="lead">
-      <a class="btn btn-success btn-lg" href="#" id="learn-more" role="button">Sign up!</a>
+      <%= link_to "Sign up!", signup_path, class: "btn btn-success btn-lg"%>
     </p>
   </div>
 </div>
