--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -32,7 +32,7 @@
       </div>
 
       <div class="form-group row mx-auto">
-        <%= f.submit class: "btn btn-outline-light" %>
+        <%= f.submit "Sign up", class: "btn btn-outline-light" %>
       </div>
       
     </div>
