--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -12,7 +12,9 @@
       <li class="nav-item active">
         <%= link_to "Create a new article", new_article_path, class: "nav-link" %>
       </li>
-      
+      <li class="nav-item active">
+        <%= link_to "Sign up", signup_path, class: "nav-link"%>
+      </li>  
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
