--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -8,7 +8,10 @@
         <div class="card-body text-center">
           <blockquote class="blockquote mb-0">
             <p><%= truncate(article.description, length:300) %></p>
-            <footer class="blockquote-footer"> <%= article.user.username if article.user %> <cite title="Date">
+            <footer class="blockquote-footer"> 
+              <% if article.user %>
+                <%= link_to article.user.username, article.user, class: "text-dark" %>
+              <% end %> <cite title="Date">
               <%= time_ago_in_words(article.created_at) %> 
               <small class="font-italic">
               <% if article.updated_at != article.created_at %>
