--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,12 +3,16 @@
   <div class="row justify-content-md-center">
     <div class="col-8">
       <div class="card mt-3 shadow rounded">
-
+        <div class="card-header">
+          <div class="text-center mb-1 text-black">
+            by <%= @article.user.username if @article.user %>
+          </div>
+          <%= link_to gravatar_for(@article.user), @article.user%>
+        </div>
         <div class="card-body text-center">
           <blockquote class="blockquote mb-0">
             <div class="card-text text-left"><%= simple_format(@article.description) %></div>
             <footer class="blockquote-footer">
-              <%= @article.user.username if @article.user %>
               <cite title="Date">
                 <%= time_ago_in_words(@article.created_at) %> 
                 <small class="font-italic">
