--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -6,13 +6,16 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
+      <li class="nav-item ">
         <%= link_to "Articles", articles_path, class: "nav-link" %>
       </li>
-      <li class="nav-item active">
+      <li class="nav-item ">
+        <%= link_to "Bloggers", users_path, class: "nav-link" %>
+      </li>
+      <li class="nav-item ">
         <%= link_to "Create a new article", new_article_path, class: "nav-link" %>
       </li>
-      <li class="nav-item active">
+      <li class="nav-item">
         <%= link_to "Sign up", signup_path, class: "nav-link"%>
       </li>  
     </ul>
