--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -11,24 +11,26 @@
         </div>
         <div class="card-body text-center">
           <blockquote class="blockquote mb-0">
-            <div class="card-text text-left"><%= simple_format(@article.description) %></div>
+            <div class="card-text text-left">
+              <%= simple_format(@article.description) %>
+            </div>
             <footer class="blockquote-footer">
               <cite title="Date">
-                <%= time_ago_in_words(@article.created_at) %> 
+                <%= time_ago_in_words(@article.created_at) %>
                 <small class="font-italic">
-                  <% if @article.updated_at != @article.created_at %>
-                    Edited
-                  <% end %>
+                  <% if @article.updated_at != @article.created_at %> Edited <%
+                  end %>
                 </small>
               </cite>
             </footer>
-            
           </blockquote>
-          <button class="btn btn-outline-warning mt-3"><%= link_to "edit", edit_article_path(@article), class: "text-warning" %></button>
+          <button class="btn btn-outline-warning mt-3">
+            <%= link_to "edit", edit_article_path(@article), class:
+            "text-warning" %>
+          </button>
           <button class="btn btn-outline-danger mt-3">
-            <%= link_to "Delete", article_path(@article), method: :delete, class: "text-danger", data: {
-              confirm: "Are you sure?"
-            } %>
+            <%= link_to "Delete", article_path(@article), method: :delete,
+            class: "text-danger", data: { confirm: "Are you sure?" } %>
           </button>
         </div>
       </div>
@@ -37,5 +39,4 @@
   <div class="mt-3 mb-3 text-center">
     <%= link_to 'Return to articles listing', articles_path %>
   </div>
-
 </body>
