paginate user and articles

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -85,15 +85,15 @@ body {
   color: #ff0084;
 }
 .flickr_pagination a {
-  border: 1px solid #dddddd;
-  color: #0063dc;
+  border: 1px solid whitesmoke;
+  color: whitesmoke;
   text-decoration: none;
 }
 .flickr_pagination a:hover,
 .flickr_pagination a:focus {
-  border-color: #003366;
-  background: #0063dc;
-  color: white;
+  border-color: gray;
+  background: whitesmoke;
+  color: gray;
 }
 .flickr_pagination .page_info {
   color: #aaaaaa;
