--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,11 +1,11 @@
 <h1 class="text-center mt-4">Article Listings</h1>
 
 <div class="flickr_pagination">
-  <%= will_paginate @posts, :container => false %>
+  <%= will_paginate @articles, :container => false %>
 </div>
 
 <%= render 'article' %>
 
 <div class="flickr_pagination mb-4 mt-4">
-  <%= will_paginate @posts, :container => false %>
+  <%= will_paginate @articles, :container => false %>
 </div>
