--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,27 +1,49 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <%= link_to "Alpha Blog", root_path, class: "navbar-brand", id: "navbrand"%>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-toggle="collapse"
+    data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item ">
+      <li class="nav-item">
         <%= link_to "Articles", articles_path, class: "nav-link" %>
       </li>
-      <li class="nav-item ">
+      <li class="nav-item">
         <%= link_to "Bloggers", users_path, class: "nav-link" %>
       </li>
-      <li class="nav-item ">
-        <%= link_to "Create a new article", new_article_path, class: "nav-link" %>
+      <li class="nav-item">
+        <%= link_to "Create a new article", new_article_path, class:
+        "nav-link"%>
       </li>
       <li class="nav-item">
         <%= link_to "Sign up", signup_path, class: "nav-link"%>
-      </li>  
+      </li>
+      <li class="nav-item">
+        <%= link_to "Log in", login_path, class: "nav-link"%>
+      </li>
+      <li class="nav-item">
+        <%= link_to "Log out", logout_path, class: "nav-link", method: :delete%>
+      </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      <input
+        class="form-control mr-sm-2"
+        type="search"
+        placeholder="Search"
+        aria-label="Search"
+      />
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+        Search
+      </button>
     </form>
   </div>
 </nav>
