--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -14,25 +14,73 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <%= link_to "Articles", articles_path, class: "nav-link" %>
+      <li class="nav-item dropdown">
+        <a
+          class="nav-link dropdown-toggle"
+          href="#"
+          id="navbarDropdown"
+          role="button"
+          data-toggle="dropdown"
+          aria-haspopup="true"
+          aria-expanded="false"
+        >
+          Articles
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <div>
+            <%= link_to "Articles", articles_path, class: "dropdown-item" %>
+          </div>
+          <div>
+            <%= link_to "Bloggers", users_path, class: "dropdown-item" %>
+          </div>
+          <% if logged_in? %>
+          <div>
+            <%= link_to "Create a new article", new_article_path, class:
+            "dropdown-item"%>
+          </div>
+          <% end %>
+      </li>
+            <!-- Log in or log out -->
+      <% if logged_in? %>
+      <li class="nav-item dropdown">
+        <a
+          class="nav-link dropdown-toggle"
+          href="#"
+          id="navbarDropdown"
+          role="button"
+          data-toggle="dropdown"
+          aria-haspopup="true"
+          aria-expanded="false"
+        >
+          Account
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          
+          <div>
+            <%= link_to "View profile", current_user, class:"dropdown-item" %>
+          
+          </div>
+          <div>
+            <%= link_to "Edit profile", edit_user_path(current_user), class:"dropdown-item" %>
+          </div>
+          <div class="dropdown-divider"></div>
+          <div>
+            <%= link_to "Log out", logout_path, class: "dropdown-item", method:
+            :delete%>
+          </div>
+        </div>
       </li>
       <li class="nav-item">
-        <%= link_to "Bloggers", users_path, class: "nav-link" %>
+        <%= link_to current_user.username, users_path(current_user), class: "nav-link"%>
       </li>
-      <li class="nav-item">
-        <%= link_to "Create a new article", new_article_path, class:
-        "nav-link"%>
-      </li>
-      <li class="nav-item">
-        <%= link_to "Sign up", signup_path, class: "nav-link"%>
-      </li>
+      <% else %>
       <li class="nav-item">
         <%= link_to "Log in", login_path, class: "nav-link"%>
       </li>
       <li class="nav-item">
-        <%= link_to "Log out", logout_path, class: "nav-link", method: :delete%>
+        <%= link_to "Sign up", signup_path, class: "nav-link"%>
       </li>
+      <% end %>
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input
