--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,33 +1,43 @@
 <% @articles.each do |article| %>
-  <div class="row justify-content-md-center">
-    <div class="col-8">
-      <div class="card mt-3 shadow bg-white rounded">
-        <div class="card-header text-center">
-          <h5 ><%= link_to article.title, article_path(article), class:"text-success" %></h5>
-        </div>
-        <div class="card-body text-center">
-          <blockquote class="blockquote mb-0">
-            <p><%= truncate(article.description, length:300) %></p>
-            <footer class="blockquote-footer"> 
-              <% if article.user %>
-                <%= link_to article.user.username, article.user, class: "text-dark" %>
-              <% end %> <cite title="Date">
-              <%= time_ago_in_words(article.created_at) %> 
+<div class="row justify-content-md-center">
+  <div class="col-8">
+    <div class="card mt-3 shadow bg-white rounded">
+      <div class="card-header text-center">
+        <h5>
+          <%= link_to article.title, article_path(article), class:"text-success"
+          %>
+        </h5>
+      </div>
+      <div class="card-body text-center">
+        <blockquote class="blockquote mb-0">
+          <p><%= truncate(article.description, length:300) %></p>
+          <footer class="blockquote-footer">
+            <% if article.user %> <%= link_to article.user.username,
+            article.user, class: "text-dark" %> <% end %>
+            <cite title="Date">
+              <%= time_ago_in_words(article.created_at) %>
               <small class="font-italic">
-              <% if article.updated_at != article.created_at %>
-                Edited
-              <% end %>
-            </small>
-            </cite></footer>
-            
-          </blockquote>
-          <button class="btn btn-outline-success mt-3"><%= link_to "View", article_path(article), class: "text-success" %></button>
-          <button class="btn btn-outline-warning mt-3"><%= link_to "edit", edit_article_path(article), class: "text-warning" %></button>
-          <button class="btn btn-outline-danger mt-3"><%= link_to "Delete", article_path(article), method: :delete, class: "text-danger", data: {
-            confirm: "Are you sure?"
-          } %></button>
-        </div>
+                <% if article.updated_at != article.created_at %> Edited <% end
+                %>
+              </small>
+            </cite>
+          </footer>
+        </blockquote>
+        <button class="btn btn-outline-success mt-3">
+          <%= link_to "View", article_path(article), class: "text-success" %>
+        </button>
+        <% if logged_in? && article.user == current_user %>
+        <button class="btn btn-outline-warning mt-3">
+          <%= link_to "edit", edit_article_path(article), class: "text-warning"
+          %>
+        </button>
+        <button class="btn btn-outline-danger mt-3">
+          <%= link_to "Delete", article_path(article), method: :delete, class:
+          "text-danger", data: { confirm: "Are you sure?" } %>
+        </button>
+        <% end %>
       </div>
     </div>
   </div>
+</div>
 <% end %>
