--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -14,6 +14,9 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <%= link_to "Bloggers", users_path, class: "nav-link" %>
+      </li>
       <li class="nav-item dropdown">
         <a
           class="nav-link dropdown-toggle"
@@ -30,9 +33,7 @@
           <div>
             <%= link_to "Articles", articles_path, class: "dropdown-item" %>
           </div>
-          <div>
-            <%= link_to "Bloggers", users_path, class: "dropdown-item" %>
-          </div>
+          
           <% if logged_in? %>
           <div>
             <%= link_to "Create a new article", new_article_path, class:
