--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -15,9 +15,10 @@
           <%= pluralize(user.articles.count, "article") %>
         </p>
         <%= link_to "View profile", user, class:"btn btn-outline-success mt-3"
-        %> <%= link_to "Edit profile", edit_user_path(user), class:"btn
-        btn-outline-warning mt-3" %>
-
+        %>
+        <!-- conditional edit -->
+        <% if logged_in? && user == current_user %> <%= link_to "Edit profile",
+        edit_user_path(user), class:"btn btn-outline-warning mt-3" %> <% end %>
         <div class="card-footer text-muted mb-0 mt-4" %>
           <small>Joined <%= time_ago_in_words(user.created_at) %> ago</small>
         </div>
