--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -53,7 +53,7 @@
           aria-haspopup="true"
           aria-expanded="false"
         >
-          Account
+        Profile [<%= current_user.username %>]
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           
@@ -71,9 +71,7 @@
           </div>
         </div>
       </li>
-      <li class="nav-item">
-        <%= link_to current_user.username, users_path(current_user), class: "nav-link"%>
-      </li>
+      
       <% else %>
       <li class="nav-item">
         <%= link_to "Log in", login_path, class: "nav-link"%>
