--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -64,10 +64,13 @@
           <div>
             <%= link_to "Edit profile", edit_user_path(current_user), class:"dropdown-item" %>
           </div>
-          <div class="dropdown-divider"></div>
           <div>
             <%= link_to "Log out", logout_path, class: "dropdown-item", method:
             :delete%>
+          </div>
+          <div class="dropdown-divider"></div>
+          <div>
+            <%= link_to "delete profile", user_path(current_user), class: "dropdown-item text-danger", method: :delete, data: {confirm: "Are you sure?"} %>
           </div>
         </div>
       </li>
