--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -26,7 +26,8 @@
         <button class="btn btn-outline-success mt-3">
           <%= link_to "View", article_path(article), class: "text-success" %>
         </button>
-        <% if logged_in? && article.user == current_user %>
+        <% if logged_in? && (article.user == current_user ||
+        current_user.admin?) %>
         <button class="btn btn-outline-warning mt-3">
           <%= link_to "edit", edit_article_path(article), class: "text-warning"
           %>
