--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -24,7 +24,8 @@
               </cite>
             </footer>
           </blockquote>
-          <% if logged_in? && @article.user == current_user %>
+          <% if logged_in? && (@article.user == current_user ||
+          current_user.admin?) %>
           <button class="btn btn-outline-warning mt-3">
             <%= link_to "edit", edit_article_path(@article), class:
             "text-warning" %>
