--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,8 +5,12 @@
 <%= gravatar_for @user, size: 200%>
 
 <div class="text-center mt-4">
-  <% if logged_in? && @user == current_user %> <%= link_to "Edit your profile",
-  edit_user_path(@user), class: "btn btn-outline-info"%> <% end %>
+  <% if logged_in? && @user == current_user %> 
+    <%= link_to "Edit your profile", edit_user_path(@user), class: "btn btn-outline-info"%> 
+  <% end %>
+  <% if current_user.admin? %> 
+    <%= link_to "Delete user", user_path(@user), class:"btn btn-outline-danger", method: :delete, data: {confirm: "Are you sure you want to delete the user account and all associated articles"} %>
+  <% end %> 
 </div>
 
 <h3 class="text-center mt-4">Articles</h3>
