--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -41,7 +41,33 @@
           </div>
           <% end %>
       </li>
-            <!-- Log in or log out -->
+
+      <li class="nav-item dropdown">
+        <a
+          class="nav-link dropdown-toggle"
+          href="#"
+          id="navbarDropdown"
+          role="button"
+          data-toggle="dropdown"
+          aria-haspopup="true"
+          aria-expanded="false"
+        >
+          Categories
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <div>
+            <%= link_to "Categories", categories_path, class: "dropdown-item" %>
+          </div>
+          
+          <% if logged_in? %>
+          <div>
+            <%= link_to "Create a new category", new_category_path, class:
+            "dropdown-item"%>
+          </div>
+          <% end %>
+      </li>
+
+      <!-- Log in or log out -->
       <% if logged_in? %>
       <li class="nav-item dropdown">
         <a
