--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -59,7 +59,7 @@
             <%= link_to "Categories", categories_path, class: "dropdown-item" %>
           </div>
           
-          <% if logged_in? %>
+          <% if logged_in? && current_user.admin? %>
           <div>
             <%= link_to "Create a new category", new_category_path, class:
             "dropdown-item"%>
