--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -7,6 +7,11 @@
           <%= link_to article.title, article_path(article), class:"text-success"
           %>
         </h5>
+        <% if article.categories.any? %>
+          <div class="mt-2">
+            <%= render article.categories %>
+          </div>
+        <% end %>
       </div>
       <div class="card-body text-center">
         <blockquote class="blockquote mb-0">
