--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -21,6 +21,16 @@
           <%= f.text_area :description, class: 'form-control shadow rounded', rows: 10, placeholder: "Article Description"%>
         </div>
       </div>
+
+      <div class="row">
+        <div class="form-group col-2 ml-4">
+          <%= f.label :category, class: 'text-white' %>
+        </div>
+        <div class="form-group col-9" style="width: 100%">
+          <%= f.collection_select(:category_ids, Category.all, :id, :name, { prompt: "Make your selection from the list below (can be empty)" },{multiple: true, size: 3, class: "custom-select shadow rounded" }) %>
+        </div>
+      </div>
+
       <div class="form-group row mx-auto">
         <%= f.submit class: "btn btn-outline-light" %>
       </div>
